--- a/index.html
+++ b/index.html
@@ -7,8 +7,17 @@
     <title>Nirvana On Earth</title>
     <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="fontawesome/css/all.min.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <section>
+
+    </section>
+
+    <!-- About - Mg Mg -->
+    <section>
+
+    </section>
 
     
     <script src="bootstrap/js/bootstrap.bundle.min.js"></script>
