--- a/index.html
+++ b/index.html
@@ -10,16 +10,50 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <!-- Home - Kyaw San Win -->
     <section>
 
     </section>
+    <!-- End Home -->
 
-    <!-- About - Mg Mg -->
+    <!-- Place - Htet Yin Min -->
     <section>
 
     </section>
+    <!-- End Place -->
 
+    <!-- About - Aung Phone Pyae -->
+    <section>
+
+    </section>
+    <!-- End About -->
+
+    <!-- Gallery - Kyaw Win Tun -->
+    <section>
+
+    </section>
+    <!-- End Gallery -->
+
+    <!-- Client - Thet Lin Aung -->
+    <section>
+
+    </section>
+    <!-- End Client -->
+
+    <!-- Contact Us - Aung Phone Pyae -->
+    <section>
+
+    </section>
+    <!-- End Contact Us -->
+
+    <!-- Footer - Kyaw San Win -->
+    <section>
+
+    </section>
+    <!-- End Footer -->
     
     <script src="bootstrap/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
+<!-- Model - Thet Lin Aung -->
