Tour Section update

--- a/index.html
+++ b/index.html
@@ -17,7 +17,41 @@
     <!-- End Home -->
 
     <!-- Place - Htet Yin Min -->
-    <section>
+    <section class="tourSection" id="tourSection">        
+
+        <div class="container">
+            <h3 class="my-5">Most Popular Tours</h3>
+
+            <div class="row">
+                <div class="col-3">
+                    <div class="card">
+                        <div class="card_frontSide">
+                            <img src="images/dubai.png" alt="Dubai Tour" class="img-fluid">
+                            <div class="card-body text-center">
+                                <h5 class="card-title">Dubai</h5>
+                                <div class="card-text">
+                                    <ul class="list-group">
+                                        <li class="list-group-item">7 days tours</li>
+                                        <li class="list-group-item">Up to 30 people</li>
+                                        <li class="list-group-item">2 tour guides</li>
+                                        <li class="list-group-item">Sleep in cozy hotels</li>
+                                    </ul>
+                                </div>                                
+                            </div>
+                        </div>
+                        <div class="card_backSide text-center">
+                            <div class="card_action">
+                                <div class="card_price-box">
+                                    <p class="card_price-only">Only</p>
+                                    <p class="card_price-value">$297</p>
+                                </div>
+                                <a href="#" class="btn tourBookBtn text-white">Book Now</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
 
     </section>
     <!-- End Place -->
