Tour Section Update

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <div class="col-3">
                     <div class="card">
                         <div class="card_frontSide">
-                            <img src="images/dubai.png" alt="Dubai Tour" class="img-fluid">
+                            <img src="images/tour-dubai.png" alt="Dubai Tour" class="img-fluid">
                             <div class="card-body text-center">
                                 <h5 class="card-title">Dubai</h5>
                                 <div class="card-text">
