Adding Gallery Images & My Section

--- a/index.html
+++ b/index.html
@@ -63,8 +63,42 @@
     <!-- End About -->
 
     <!-- Gallery - Kyaw Win Tun -->
-    <section>
-
+    <section id="tourGallery">
+        <div class="container-fluid">
+            <h3 class="text-center my-5 gallery_title">Tour Gallery</h3>
+            <div class="row row-cols-1 row-cols-sm-1 row-cols-md-2 row-cols-lg-3 my-4">
+                   <div class="col p-0 parent">
+                         <div class="child bg-one">
+                               <h2 class="city_name">Suspension Bridge, USA</h2>
+                         </div>
+                   </div>
+                   <div class="col p-0 parent">
+                         <div class="child bg-two">
+                               <h2 class="city_name">Lucena View, Switzerland</h2>
+                         </div>
+                    </div>
+                  <div class="col p-0 parent">
+                        <div class="child bg-three">
+                              <h2 class="city_name">Golden Bagan, Myanmar</h2>
+                        </div>
+                   </div>
+                   <div class="col p-0 parent">
+                         <div class="child bg-four">
+                               <h2 class="city_name">Beautiful Tokyo, Japan</h2>
+                         </div>
+                    </div>
+                    <div class="col p-0 parent">
+                         <div class="child bg-five">
+                               <h2 class="city_name">Urban City, London</h2>
+                         </div>
+                    </div>
+                    <div class="col p-0 parent">
+                         <div class="child bg-six">
+                               <h2 class="city_name">Amazing Beach, Moldives</h2>
+                         </div>
+                    </div>
+ 
+            </div>
     </section>
     <!-- End Gallery -->
 
