Updating tour section

--- a/index.html
+++ b/index.html
@@ -24,28 +24,28 @@
 
             <div class="row">
                 <div class="col-3">
-                    <div class="card">
-                        <div class="card_frontSide">
+                    <div class="tourCard">
+                        <div class="tourCard-side tourCard-front-side">
                             <img src="images/tour-dubai.png" alt="Dubai Tour" class="img-fluid">
                             <div class="card-body text-center">
-                                <h5 class="card-title">Dubai</h5>
+                                <h5 class="card-title my-2">Dubai</h5>
                                 <div class="card-text">
-                                    <ul class="list-group">
-                                        <li class="list-group-item">7 days tours</li>
-                                        <li class="list-group-item">Up to 30 people</li>
-                                        <li class="list-group-item">2 tour guides</li>
-                                        <li class="list-group-item">Sleep in cozy hotels</li>
+                                    <ul class="card_list tourCard-list p-1">
+                                        <li class="p-3">7 days tours</li>
+                                        <li class="p-3">Up to 30 people</li>
+                                        <li class="p-3">2 tour guides</li>
+                                        <li class="p-3">Sleep in cozy hotels</li>
                                     </ul>
                                 </div>                                
                             </div>
                         </div>
-                        <div class="card_backSide text-center">
-                            <div class="card_action">
-                                <div class="card_price-box">
-                                    <p class="card_price-only">Only</p>
-                                    <p class="card_price-value">$297</p>
+                        <div class="tourCard-side tourCard-back-side tourCard-back-side-col">
+                            <div class="tourCard-align">
+                                <div class="tourCard-price-box">
+                                    <p class="tourCard-price-only">Only</p>
+                                    <p class="tourCard-price-value">$297</p>
                                 </div>
-                                <a href="#" class="btn tourBookBtn text-white">Book Now</a>
+                                <a href="#" class="tourBtn tourBtn-white">Book Now!</a>
                             </div>
                         </div>
                     </div>
