adding travel_highligh section

--- a/index.html
+++ b/index.html
@@ -63,6 +63,27 @@
     <!-- End About -->
 
     <!-- Gallery - Kyaw Win Tun -->
+    <section id="travelHlightlight">
+        <h3 class="text-center my-5 gallery_title">Travelling Highlight</h3>
+        <div class="container-fluid background">
+            <div>
+                <span><i class="far fa-play-circle fa-5x icon" type="button" data-bs-toggle="modal" data-bs-target="#popupvideo"></i></span>
+            </div>
+            <div class="modal fade" id="popupvideo" aria-hidden="true">
+                <div class="modal-dialog modal-lg">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h3 class="text-center gallery_title">Traveling Hightlight</h3>
+                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                        </div>
+                        <div class="modal-body">
+                            <video src="images/hightlight.mp4" controls class="travel_video"></video>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
     <section id="tourGallery">
         <div class="container-fluid">
             <h3 class="text-center my-5 gallery_title">Tour Gallery</h3>
@@ -75,11 +96,17 @@
                    <div class="col p-0 parent">
                          <div class="child bg-two">
                                <h2 class="city_name">Lucena View, Switzerland</h2>
+                               <figcaption class="gallery_view">
+                                   <a href="images/gallery-usa.jpg">View More</a>
+                               </figcaption>
                          </div>
                     </div>
                   <div class="col p-0 parent">
                         <div class="child bg-three">
                               <h2 class="city_name">Golden Bagan, Myanmar</h2>
+                              <figcaption class="gallery_view">
+                                <a href="images/gallery-usa.jpg">View More</a>
+                            </figcaption>
                         </div>
                    </div>
                    <div class="col p-0 parent">
