Updating Tour Section

--- a/index.html
+++ b/index.html
@@ -17,24 +17,26 @@
     <!-- End Home -->
 
     <!-- Place - Htet Yin Min -->
-    <section class="tourSection" id="tourSection">        
+    <section class="tourSection" id="tourSection">
+        
+    <div class="scrollup"><i class="fas fa-chevron-circle-up"></i></div>
 
         <div class="container">
-            <h3 class="my-5">Most Popular Tours</h3>
+            <h3 class="my-5 text-center">Most Popular Tours</h3>
 
-            <div class="row">
-                <div class="col-3">
+            <div class="row my-5">
+                <div class="col-12 col-md-6 col-lg-3">
                     <div class="tourCard">
                         <div class="tourCard-side tourCard-front-side">
-                            <img src="images/tour-dubai.png" alt="Dubai Tour" class="img-fluid">
+                            <img src="images/tour01.jpg" alt="Santorini Tour" class="img-fluid">
                             <div class="card-body text-center">
-                                <h5 class="card-title my-2">Dubai</h5>
+                                <h5 class="card-title my-2">Santorini</h5>
                                 <div class="card-text">
                                     <ul class="card_list tourCard-list p-1">
                                         <li class="p-3">7 days tours</li>
                                         <li class="p-3">Up to 30 people</li>
-                                        <li class="p-3">2 tour guides</li>
-                                        <li class="p-3">Sleep in cozy hotels</li>
+                                        <li class="p-3">3 tour guides</li>
+                                        <li class="p-3">Sleep in cozy hotel</li>
                                     </ul>
                                 </div>                                
                             </div>
@@ -43,7 +45,91 @@
                             <div class="tourCard-align">
                                 <div class="tourCard-price-box">
                                     <p class="tourCard-price-only">Only</p>
-                                    <p class="tourCard-price-value">$297</p>
+                                    <p class="tourCard-price-value">$1200</p>
+                                </div>
+                                <a href="#" class="tourBtn tourBtn-white">Book Now!</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-12 col-md-6 col-lg-3">
+                    <div class="tourCard">
+                        <div class="tourCard-side tourCard-front-side">
+                            <img src="images/tour02.jpg" alt="Dubai Tour" class="img-fluid">
+                            <div class="card-body text-center">
+                                <h5 class="card-title my-2">Dubai</h5>
+                                <div class="card-text">
+                                    <ul class="card_list tourCard-list p-1">
+                                        <li class="p-3">5 days tours</li>
+                                        <li class="p-3">Up to 15 people</li>
+                                        <li class="p-3">2 tour guides</li>
+                                        <li class="p-3">Sleep in 5-star hotel</li>
+                                    </ul>
+                                </div>                                
+                            </div>
+                        </div>
+                        <div class="tourCard-side tourCard-back-side tourCard-back-side-col">
+                            <div class="tourCard-align">
+                                <div class="tourCard-price-box">
+                                    <p class="tourCard-price-only">Only</p>
+                                    <p class="tourCard-price-value">$1499</p>
+                                </div>
+                                <a href="#" class="tourBtn tourBtn-white">Book Now!</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-12 col-md-6 col-lg-3">
+                    <div class="tourCard">
+                        <div class="tourCard-side tourCard-front-side">
+                            <img src="images/tour03.jpg" alt="Las Vegas Tour" class="img-fluid">
+                            <div class="card-body text-center">
+                                <h5 class="card-title my-2">Las Vegas</h5>
+                                <div class="card-text">
+                                    <ul class="card_list tourCard-list p-1">
+                                        <li class="p-3">7 days tours</li>
+                                        <li class="p-3">Up to 10 people</li>
+                                        <li class="p-3">1 tour guide</li>
+                                        <li class="p-3">Sleep in 5-star hotel</li>
+                                    </ul>
+                                </div>                                
+                            </div>
+                        </div>
+                        <div class="tourCard-side tourCard-back-side tourCard-back-side-col">
+                            <div class="tourCard-align">
+                                <div class="tourCard-price-box">
+                                    <p class="tourCard-price-only">Only</p>
+                                    <p class="tourCard-price-value">$1699</p>
+                                </div>
+                                <a href="#" class="tourBtn tourBtn-white">Book Now!</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-12 col-md-6 col-lg-3">
+                    <div class="tourCard">
+                        <div class="tourCard-side tourCard-front-side">
+                            <img src="images/tour04.jpg" alt="Singapore Tour" class="img-fluid">
+                            <div class="card-body text-center">
+                                <h5 class="card-title my-2">Singapore</h5>
+                                <div class="card-text">
+                                    <ul class="card_list tourCard-list p-1">
+                                        <li class="p-3">5 days tours</li>
+                                        <li class="p-3">Up to 20 people</li>
+                                        <li class="p-3">2 tour guides</li>
+                                        <li class="p-3">Sleep in cozy hotel</li>
+                                    </ul>
+                                </div>                                
+                            </div>
+                        </div>
+                        <div class="tourCard-side tourCard-back-side tourCard-back-side-col">
+                            <div class="tourCard-align">
+                                <div class="tourCard-price-box">
+                                    <p class="tourCard-price-only">Only</p>
+                                    <p class="tourCard-price-value">$850</p>
                                 </div>
                                 <a href="#" class="tourBtn tourBtn-white">Book Now!</a>
                             </div>
@@ -53,7 +139,12 @@
             </div>
         </div>
 
+        <div class="text-center">
+            <a href="#" class="discoverBtn tourMfix">Discover All Tours</a>
+        </div>
+
     </section>
+
     <!-- End Place -->
 
     <!-- About - Aung Phone Pyae -->
