--- a/index.html
+++ b/index.html
@@ -278,20 +278,8 @@
     <script src="jquery.min.js"></script>
     <script src="bootstrap/js/bootstrap.bundle.min.js"></script> 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.js"></script>
-    <script src="script.js"></script>
-    <!-- GalleryPopUp -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/jquery.magnific-popup.js"></script>
-    <script>
-          $(document).ready(function(){
-                $('.gallerys').magnificPopup({
-                      type:'image',
-                      delegate: 'a',
-                      gallery:{
-                            enabled:true
-                      }
-                })
-          })
-    </script>
+    <script src="script.js"></script>    
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/jquery.magnific-popup.js"></script>    <!-- GalleryPopUp -->
 
 </body>
 </html>
