Fix responsive for >1400px devices

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                         <div class="tourCard-side tourCard-front-side">
                             <img src="images/tour01.jpg" alt="Santorini Tour" class="img-fluid">
                             <div class="card-body text-center">
-                                <h5 class="card-title my-2">Santorini</h5>
+                                <h5 class="card-title my-2 pb-2">Santorini</h5>
                                 <div class="card-text">
                                     <ul class="card_list tourCard-list p-1">
                                         <li class="p-3">7 days tours</li>
@@ -60,7 +60,7 @@
                         <div class="tourCard-side tourCard-front-side">
                             <img src="images/tour02.jpg" alt="Dubai Tour" class="img-fluid">
                             <div class="card-body text-center">
-                                <h5 class="card-title my-2">Dubai</h5>
+                                <h5 class="card-title my-2 pb-2">Dubai</h5>
                                 <div class="card-text">
                                     <ul class="card_list tourCard-list p-1">
                                         <li class="p-3">5 days tours</li>
@@ -88,7 +88,7 @@
                         <div class="tourCard-side tourCard-front-side">
                             <img src="images/tour03.jpg" alt="Las Vegas Tour" class="img-fluid">
                             <div class="card-body text-center">
-                                <h5 class="card-title my-2">Las Vegas</h5>
+                                <h5 class="card-title my-2 pb-2">Las Vegas</h5>
                                 <div class="card-text">
                                     <ul class="card_list tourCard-list p-1">
                                         <li class="p-3">7 days tours</li>
@@ -116,7 +116,7 @@
                         <div class="tourCard-side tourCard-front-side">
                             <img src="images/tour04.jpg" alt="Singapore Tour" class="img-fluid">
                             <div class="card-body text-center">
-                                <h5 class="card-title my-2">Singapore</h5>
+                                <h5 class="card-title my-2 pb-2">Singapore</h5>
                                 <div class="card-text">
                                     <ul class="card_list tourCard-list p-1">
                                         <li class="p-3">5 days tours</li>
