add scroll up button

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <!-- Home - Kyaw San Win -->
-    <section>
+    <section class="home">
 
     </section>
     <!-- End Home -->
@@ -21,8 +21,6 @@
     <!-- Place - Htet Yin Min -->
     <section class="tourSection" id="tourSection">
         
-        <div class="scrollup"><i class="fas fa-chevron-circle-up"></i></div>
-
         <div class="container">
             <h3 class="my-5 text-center">Most Popular Tours</h3>
 
@@ -274,6 +272,8 @@
 
     </section>
     <!-- End Footer -->
+
+    <a href="#" class="to-top"><i class="fas fa-chevron-circle-up"></i></a>
     
     <script src="jquery.min.js"></script>
     <script src="bootstrap/js/bootstrap.bundle.min.js"></script> 
