--- a/index.html
+++ b/index.html
@@ -171,9 +171,54 @@
 
 
     <!-- About - Aung Phone Pyae -->
-    <section>
+    <section class="text-center about">
+        <div class="container">
 
-    </section>
+           <div class="about-title">
+                <div class="col-sm-12">
+                    <div class="section-title text-center">
+                        <h2>Who We Are?</h2>
+                        <hr>
+                    </div>
+                </div>
+            </div>
+
+            <div class="row">
+                <!-- ABOUT IMAGE -->
+                <div class="col-md-6 wow fadeInLeft" data-wow-delay=".2s">
+                    <div class="about-image">
+                        <img src="images/about-about.jpg" class="img-fluid">
+                    </div>
+                </div>
+                <!-- ABOUT TEXT -->
+                <div class="col-md-6">
+                    <div class="about-text">
+                        <h2 class="wow fadeInDown" data-wow-delay=".2s">We are <strong style="color: #FF9E00;">Travel experts</strong></h2>
+                        <p class="wow fadeInDown" data-wow-delay=".4s">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose.</p>
+                    </div>                   
+                    <!-- ABOUT ICONS -->
+                    <div class="row">
+
+                        <div class="col-lg-4 col-sm-6 col-ex-12 about-item wow lightSpeedIn" data-wow-offset="200" >
+                            <span class="fa fa-percent"></span>
+                            <h3>Travel Cheap</h3>
+                        </div>
+
+                        <div class="col-lg-4 col-sm-6 col-ex-12 about-item wow lightSpeedIn" data-wow-offset="200">
+                            <span class="fa fa-plane"></span>
+                            <h3>Travel Comfort</h3>
+                        </div>
+
+                        <div class="col-lg-4 col-sm-6 col-ex-12 about-item wow lightSpeedIn" data-wow-offset="200">
+                            <span class="fa fa-heart"></span>
+                            <h3>Travel Safe</h3>
+                        </div>
+                      
+                    </div>
+                </div>    
+            
+        </div>
+    </section>    
     <!-- End About -->
 
     <!-- Gallery - Kyaw Win Tun -->
