--- a/index.html
+++ b/index.html
@@ -177,27 +177,6 @@
     <!-- End About -->
 
     <!-- Gallery - Kyaw Win Tun -->
-    <!-- <section id="travelHlightlight">
-        <h3 class="text-center my-5 gallery_title">Travelling Highlight</h3>
-        <div class="container-fluid background">
-            <div>
-                <span><i class="far fa-play-circle fa-5x icon" type="button" data-bs-toggle="modal" data-bs-target="#popupvideo"></i></span>
-            </div>
-            <div class="modal fade" id="popupvideo" aria-hidden="true">
-                <div class="modal-dialog modal-lg">
-                    <div class="modal-content">
-                        <div class="modal-header">
-                            <h3 class="text-center gallery_title">Traveling Hightlight</h3>
-                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                        </div>
-                        <div class="modal-body">
-                            <video src="images/hightlight.mp4" controls class="travel_video"></video>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section> -->
     <section id="tourGallery">
         <div class="container-fluid my-5">
             <h3 class="text-center my-5 gallery_title">Tour Gallery</h3>
@@ -254,6 +233,18 @@
 
     </section>
     <!-- End Gallery -->
+
+    <!-- travel HighLight -->
+    <section id="travelHighlight">
+        <h3 class="text-center my-5 gallery_title">Travel Highlight</h3>
+        <div class="container-fluid bg_highlight highlight_frame">
+            <div class="centerbtn">
+                <a href="https://www.youtube.com/watch?v=AHW5x7cmf1U" class="video_link"><i class="fas fa-play-circle play_btn"></i></a>
+            </div>
+        </div>
+    </section>
+
+    <!-- End travel Highlight -->
 
     <!-- Client - Thet Lin Aung -->
     <section>
