--- a/index.html
+++ b/index.html
@@ -185,15 +185,15 @@
 
             <div class="row">
                 <!-- ABOUT IMAGE -->
-                <div class="col-md-6 wow fadeInLeft" data-wow-delay=".2s">
+                <div class="col-md-6">
                     <div class="about-image">
-                        <img src="images/about-about.jpg" class="img-fluid">
+                        <img src="images/about-travellerMinimal.jpg" class="img-fluid">
                     </div>
                 </div>
                 <!-- ABOUT TEXT -->
                 <div class="col-md-6">
                     <div class="about-text">
-                        <h2 class="wow fadeInDown" data-wow-delay=".2s">We are <strong style="color: #FF9E00;">Travel experts</strong></h2>
+                        <h2>We are <strong style="color: #FF9E00;">Travel experts</strong></h2>
                         <p class="wow fadeInDown" data-wow-delay=".4s">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose.</p>
                     </div>                   
                     <!-- ABOUT ICONS -->
@@ -299,6 +299,60 @@
 
     <!-- Contact Us - Aung Phone Pyae -->
     <section>
+
+        <div class="container contact">
+            <div class="row">
+
+                <div class="col-md-3">
+                    <div class="contact-info">
+                        <img src="images/contact-image.jpg" alt="image"/>
+                        <h2>Contact Us</h2>
+                        <h4>We would love to hear from you!</h4>
+                    </div>
+                </div>
+
+                <div class="col-md-9">
+                    <div class="contact-form">
+
+                        <div class="form-group">
+                          <label class="control-label col-sm-2" for="fname">First Name:</label>
+                          <div class="col-sm-10">          
+                            <input type="text" class="form-control" id="fname" placeholder="Enter First Name" name="fname">
+                          </div>
+                        </div>
+
+                        <div class="form-group">
+                          <label class="control-label col-sm-2" for="lname">Last Name:</label>
+                          <div class="col-sm-10">          
+                            <input type="text" class="form-control" id="lname" placeholder="Enter Last Name" name="lname">
+                          </div>
+                        </div>
+
+                        <div class="form-group">
+                          <label class="control-label col-sm-2" for="email">Email:</label>
+                          <div class="col-sm-10">
+                            <input type="email" class="form-control" id="email" placeholder="Enter email" name="email">
+                          </div>
+                        </div>
+
+                        <div class="form-group">
+                          <label class="control-label col-sm-2" for="comment">Comment:</label>
+                          <div class="col-sm-10">
+                            <textarea class="form-control" rows="5" id="comment"></textarea>
+                          </div>
+                        </div>
+
+                        <div class="form-group">        
+                          <div class="col-sm-offset-2 col-sm-10">
+                            <button type="submit" class="btn btn-default">Submit</button>
+                          </div>
+                        </div>
+                        
+                    </div>
+                </div>
+                
+            </div>
+        </div>
 
     </section>
     <!-- End Contact Us -->
