--- a/index.html
+++ b/index.html
@@ -314,28 +314,28 @@
                 <div class="col-md-9">
                     <div class="contact-form">
 
-                        <div class="form-group">
-                          <label class="control-label col-sm-2" for="fname">First Name:</label>
+                        <div class="form-group mb-3">
+                          <label class="control-label col-sm-2" for="name">Name:</label>
                           <div class="col-sm-10">          
-                            <input type="text" class="form-control" id="fname" placeholder="Enter First Name" name="fname">
+                            <input type="text" class="form-control" id="name" placeholder="Enter Your Name" name="name">
                           </div>
                         </div>
 
-                        <div class="form-group">
-                          <label class="control-label col-sm-2" for="lname">Last Name:</label>
+                        <div class="form-group mb-3">
+                          <label class="control-label col-sm-2" for="phnumber">Phone Number:</label>
                           <div class="col-sm-10">          
-                            <input type="text" class="form-control" id="lname" placeholder="Enter Last Name" name="lname">
+                            <input type="number" class="form-control" id="phnumber" placeholder="Enter Your Phone number" name="phnumber">
                           </div>
                         </div>
 
-                        <div class="form-group">
+                        <div class="form-group mb-3">
                           <label class="control-label col-sm-2" for="email">Email:</label>
                           <div class="col-sm-10">
                             <input type="email" class="form-control" id="email" placeholder="Enter email" name="email">
                           </div>
                         </div>
 
-                        <div class="form-group">
+                        <div class="form-group mb-3">
                           <label class="control-label col-sm-2" for="comment">Comment:</label>
                           <div class="col-sm-10">
                             <textarea class="form-control" rows="5" id="comment"></textarea>
