--- a/index.html
+++ b/index.html
@@ -357,9 +357,32 @@
     </section>
     <!-- End Contact Us -->
 
-    <!-- Footer - Kyaw San Win -->
+    <!-- Footer -->
     <section>
+        <footer class="myFooter mt-5">
+            <div class="text-center">
+                Nirvana<br>On Earth
+            </div>
 
+            <div class="container">
+                <div class="row">
+                    <div class="col-12 col-6">
+                        <div class="navbar navbar-expand navbar-dark footerNav">
+                            <ul class="navbar-nav me-auto">
+                                <li class="nav-item text-uppercase"><a href="" class="nav-link">Company</a></li>
+                                <li class="nav-item text-uppercase"><a href="" class="nav-link">Contact us</a></li>
+                                <li class="nav-item text-uppercase"><a href="" class="nav-link">Privacy Policy</a></li>
+                                <li class="nav-item text-uppercase"><a href="" class="nav-link">Terms</a></li>
+                            </ul>
+                        </div>
+                    </div>
+    
+                    <div class="col-12 col-6">
+                        
+                    </div>
+                </div>
+            </div>
+        </footer>
     </section>
     <!-- End Footer -->
 
