Adding section id

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <!-- End Home -->
 
     <!-- Place - Htet Yin Min -->
-    <section class="tourSection" id="tourSection">
+    <section class="tourSection" id="places">
         
         <div class="container">
             <h3 class="my-5 text-center">Most Popular Tours</h3>
@@ -171,13 +171,13 @@
 
 
     <!-- About - Aung Phone Pyae -->
-    <section class="text-center about">
+    <section class="text-center about" id="about">
         <div class="container">
 
            <div class="about-title">
                 <div class="col-sm-12">
                     <div class="section-title text-center">
-                        <h2>Who We Are?</h2>
+                        <h3>Who We Are?</h3>
                         <hr>
                     </div>
                 </div>
@@ -222,7 +222,7 @@
     <!-- End About -->
 
     <!-- Gallery - Kyaw Win Tun -->
-    <section id="tourGallery">
+    <section id="gallery">
         <div class="container-fluid my-5">
             <h3 class="text-center my-5 gallery_title">Tour Gallery</h3>
             <div class="row row-cols-1 row-cols-sm-1 row-cols-md-2 row-cols-lg-3 my-4 gallerys">
@@ -292,13 +292,13 @@
     <!-- End travel Highlight -->
 
     <!-- Client - Thet Lin Aung -->
-    <section>
+    <section id="clients">
 
     </section>
     <!-- End Client -->
 
     <!-- Contact Us - Aung Phone Pyae -->
-    <section>
+    <section id="contact">
 
         <div class="container contact">          
             <div class="row">
@@ -356,7 +356,7 @@
     </section>
     <!-- End Contact Us -->
 
-    <!-- Footer -->
+    <!-- Footer - Htet Yin Min -->
     <section>
         <footer class="myFooter mt-5 p-3">
             
