--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
                 </div>
 
                 <div class="col-md-9">
-                    <div class="contact-form">
+                    <div class="contact-form ms-4">
 
                         <div class="form-group mb-3">
                         <label class="control-label col-sm-2" for="name">Name:</label>
@@ -344,7 +344,8 @@
 
                         <div class="form-group">        
                         <div class="col-sm-offset-2 col-sm-10">
-                            <button type="submit" class="btn btn-default">Submit</button>
+                            <!-- <button type="submit" class="discoverBtn">Submit</button> -->
+                            <a href="#" class="discoverBtn">Submit</a>
                         </div>
                         </div>
                         
