--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
 
     <!-- Contact Us - Aung Phone Pyae -->
     <section id="contact">
-
+        <h3 class="mt-5 text-center gallery_title">Contact Us</h3>
         <div class="container contact">          
             <div class="row">
 
