--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
                 </button>
                 <div class="collapse navbar-collapse" id="Nav">
                     <ul class="navbar-nav ms-auto mr-5">
-                        <li class="nav-item mx-3 "><a href="" class="nav-link">Home</a></li>
-                        <li class="nav-item mx-3 "><a href="" class="nav-link">Places</a></li>
-                        <li class="nav-item mx-3 "><a href="" class="nav-link">About</a></li>
-                        <li class="nav-item mx-3 "><a href="" class="nav-link">Gallery</a></li>
-                        <li class="nav-item mx-3 "><a href="" class="nav-link">Clients</a></li>
-                        <li class="nav-item mx-3 "><a href="" class="nav-link">Content Us</a></li>
+                        <li class="nav-item mx-3 "><a href="index.html" class="nav-link">Home</a></li>
+                        <li class="nav-item mx-3 "><a href="#places" class="nav-link">Places</a></li>
+                        <li class="nav-item mx-3 "><a href="#about" class="nav-link">About</a></li>
+                        <li class="nav-item mx-3 "><a href="#gallery" class="nav-link">Gallery</a></li>
+                        <li class="nav-item mx-3 "><a href="#clients" class="nav-link">Clients</a></li>
+                        <li class="nav-item mx-3 "><a href="#content" class="nav-link">Content Us</a></li>
                     </ul>
                 </div>
             </div>
